# biglinux-noise-reduction-pipewire

./: .gitignore  Cargo.toml  README.md  _typos.toml  clippy.toml  default.nix  deny.toml  flake.nix  pyproject.toml
.audit/: files_read.txt  radon.txt  ruff_check.txt  ruff_format.txt  techdebt.txt
.github/: dependabot.yml
.github/actions/install-system-deps/: action.yml
.github/workflows/: build-package.yml  ci.yml  codeql.yml  security.yml  translate-and-build-package.yml
.serena/: project.yml
locale/: bg.json  bg.po  biglinux-noise-reduction-pipewire-tmp.pot  biglinux-noise-reduction-pipewire.pot  cs.json  cs.po  da.json  da.po  de.json  de.po  el.json  el.po  en.json  en.po  es.json  es.po  et.json  et.po  fi.json  fi.po  fr.json  fr.po  he.json  he.po  hr.json  hr.po  hu.json  hu.po  is.json  is.po  it.json  it.po  ja.json  ja.po  ko.json  ko.po  nl.json  nl.po  no.json  no.po  (+19 more)
mic-agc/: Cargo.toml
mic-agc/src/: main.rs
packaging/arch/: PKGBUILD  biglinux-noise-reduction-pipewire.install
packaging/flatpak/: br.com.biglinux.microphone.yml  generate-cargo-sources.sh
pkgbuild/: PKGBUILD  PKGBUILD-local  biglinux-noise-reduction-pipewire.install
po/: POTFILES.in  bg.po  biglinux-noise-reduction-pipewire.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
scripts/: quality-check.sh  refresh-pot.sh
scripts/calibrate/: README.md  bench_models.py  bench_paired.py  datasets.toml  gen_signals.py  requirements-extra.txt  requirements.txt  run_sweep.py  score_pair.py  setup.sh
scripts/calibrate/lib/: __init__.py  chain.py  denoisers.py  dnsmos.py  metrics.py  signals.py
src/: diagnostics.rs  lib.rs
src/biglinux_microphone/: __init__.py  __main__.py  application.py  cli.py  config.py  main.py  window.py
src/biglinux_microphone/audio/: __init__.py  filter_chain.py
src/biglinux_microphone/resources/: __init__.py  biglinux-microphone.gresource.xml  style.css
src/biglinux_microphone/services/: __init__.py  audio_monitor.py  config_persistence.py  monitor_service.py  pipewire_service.py  profile_service.py  settings_service.py
src/biglinux_microphone/ui/: __init__.py  base_view.py  components.py  main_view.py  spectrum_widget.py  visualizer_widget.py
src/biglinux_microphone/utils/: __init__.py  async_utils.py  i18n.py  tooltip_helper.py  validators.py
src/config/: audio.rs  echo_cancel.rs  equalizer.rs  mod.rs  output_filter.rs  paths.rs  processing.rs  ui.rs
src/pipeline/: echo_cancel.rs  graph.rs  mic.rs  mod.rs  nodes.rs  output.rs
src/services/: loopback.rs  mod.rs
src/services/audio_monitor/: analyzer.rs  capture.rs  mod.rs  types.rs
src/services/pipewire/: default_sink.rs  live.rs  mod.rs  module.rs  sources.rs  types.rs  worker.rs
src/ui/: app.rs  i18n.rs  mod.rs  state.rs  window.rs
src/ui/views/: mic.rs  mod.rs  output.rs  simple.rs
src/ui/widgets/: didactic.rs  eq_card.rs  mod.rs  model_picker.rs  source_picker.rs  spectrum.rs  wp_override_warning.rs
tests/: __init__.py  cli_subcommands.rs  conftest.py  pipeline_apply.rs  settings_round_trip.rs  test_config.py  test_config_persistence.py  test_echo_cancel.py  test_filter_chain.py  test_filter_chain_effects.py  test_profile_service.py  test_race_conditions.py  wireplumber_policy.rs
usr/lib/systemd/user/: biglinux-mic-agc.service  biglinux-microphone-echocancel.service  biglinux-microphone-output.service  biglinux-microphone.service  noise-reduction-pipewire.service
usr/lib/systemd/user/filter-chain.service.d/: 10-biglinux-rt.conf
usr/share/applications/: big-microphone-noise-reduction.desktop  biglinux-noise-reduction-pipewire.desktop  br.com.biglinux.microphone.desktop
usr/share/bigbashview/apps/microphone/: actions.sh  audio_visualizer.py  com.biglinux.noise_reducer.desktop  index.html  log.txt  noise_reducer.py  noise_reducer_service.py
usr/share/biglinux/microphone/: actions.sh  audio_visualizer.py  launcher.py  noise_reducer.py  noise_reducer_service.py
usr/share/libalpm/hooks/: pipewire-filter-bluetooth.hook
usr/share/libalpm/scripts/: pipewire-filter-bluetooth
usr/share/locale/bg/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/cs/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/da/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/de/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/el/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/en/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/es/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/et/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/fi/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/fr/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/he/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/hr/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  biglinux-noise-reduction-pipewire.mo
usr/share/locale/hu/LC_MESSAGES/: biglinux-noise-reduction-pipewire.json  (+1 more)
usr/share/metainfo/: br.com.biglinux.microphone.metainfo.xml
usr/share/pipewire/filter-chain/: source-gtcrn-smart.conf  source-rnnoise-smart.conf
usr/share/pipewire/filter-chain.conf.d/: 50-biglinux-priority.conf
usr/share/pipewire/pipewire.conf.d/: 50-biglinux-quantum.conf
usr/share/wireplumber/wireplumber.conf.d/: 60-biglinux-echo-cancel-routing.conf  61-biglinux-alsa-headroom.conf  61-biglinux-usb-headroom.conf
(+43 files in other folders)
