[package]
name = "biglinux-mic-agc"
version = "0.2.0"
edition = "2021"
description = "PipeWire microphone AGC service for BigLinux"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pipewire = { version = "0.9", features = ["v0_3_77"] }
libspa = { version = "0.9" }
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["mman", "signal"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
